--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD Operations</title>
+    <title>Users List</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <h1>Users</h1>
-    <a href="/add">Add New User</a>
-    <table border="1">
+    <a href="/" class="btn">Home</a>
+    <a href="/add" class="btn">Add New User</a>
+    <table>
         <tr>
             <th>ID</th>
             <th>Name</th>
@@ -21,8 +23,10 @@
             <td>{{ user[1] }}</td>
             <td>{{ user[2] }}</td>
             <td>
-                <a href="/edit/{{ user[0] }}">Edit</a>
-                <a href="/delete/{{ user[0] }}" onclick="return confirm('Are you sure?')">Delete</a>
+                <a href="/edit/{{ user[0] }}" class="btn">Edit</a>
+                <form action="/delete/{{ user[0] }}" method="POST" style="display:inline;">
+                    <button type="submit" class="btn" onclick="return confirm('Are you sure?')">Delete</button>
+                </form>
             </td>
         </tr>
         {% endfor %}
