--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit User</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <h1>Edit User</h1>
-    <form method="POST">
-        <label for="name">Name:</label>
-        <input type="text" name="name" value="{{ user[1] }}" required><br><br>
-        
-        <label for="email">Email:</label>
-        <input type="email" name="email" value="{{ user[2] }}" required><br><br>
-        
-        <button type="submit">Save</button>
-    </form>
+    <div class="add-edit-page">
+        <form method="POST">
+            <label for="name">Name:</label>
+            <input type="text" name="name" value="{{ user[1] }}" required><br><br>
+            
+            <label for="email">Email:</label>
+            <input type="email" name="email" value="{{ user[2] }}" required><br><br>
+            
+            <button type="submit">Save Changes</button>
+        </form>
+    </div>
 </body>
 </html>
